4.05 2014-11-01

    [ RELEASE NOTES ]
    - this release includes *significant* refactoring of temporary file
      handling in CGI.pm. See "Changes in temporary file handling" in perldoc

    [ DOCUMENTATION ]
    - change AUTHOR INFORMATION to LICENSE to please Kwalitee

    [ TESTING ]
    - t/arbitrary_handles.t to check need for patch in RT #54055, it
      turns out there is no need - the first argument to CGI->new can
      be an arbitrary handle
    - add test case for incorrect unescaping of redirect headers
      (RT #61120)
    - add tests for the handle method (RT #85074, thanks to TONYC@cpan.org)

    [ SPEC / BUG FIXES ]
    - don't set binmode on STDOUT/STDERR/STDIN if a none standard layer
      is already set on them on none UNIX platforms (RT #57524)
    - make XForms:Model data accesible through POSTDATA/PUTDATA param
      (RT #75628)
    - prevent corruption of POSTDATA/PUTDATA when -utf8 flag is used and use
      tempfiles to handle this data (RT #79102, thanks anonymous)
    - unescape request URI *after* having removed the query string to prevent
      removal of ? chars that are part of the original URI (and were encoded)
      (RT #83265)
    - fix q( to qq( in CGI::Carp so $@ is correct interpolated (RT #83360)
    - don't call ->query_string in url unless -query is passed (RT #87790)
      (optimisation and fits the current documented behaviour)

4.04 2014-09-04

    [ RELEASE NOTES ]
    - this release removes some long deprecated modules/functions and
      includes refactoring to the temporary file handling in CGI.pm. if
      you are doing anything out of the ordinary with regards to temp
      files you should test your code before deploying this update as
      temp files may no longer be stored in previously used locations

    [ REMOVED / DEPRECATIONS ]
    - startform and endform methods removed (previously deprecated, you
      should be using the start_form and end_form methods)