@@ -25,6 +25,7 @@ $MOD_PERL            = 0; # no mod_perl by default
 $POST_MAX            = -1; # no limit to uploaded files
 $DISABLE_UPLOADS     = 0;
 $UNLINK_TMP_FILES    = 1;
+$LIST_CONTEXT_WARN   = 1;
 
 @SAVED_SYMBOLS = ();
 
@@ -446,6 +447,11 @@ sub param {
       eval "require Encode; 1;" unless Encode->can('decode'); # bring in these functions
       @result = map {ref $_ ? $_ : $self->_decode_utf8($_) } @result;
     }
+
+	if ( wantarray && $LIST_CONTEXT_WARN ) {
+		warn "CGI::param called in list context, this can lead to vulnerabilities. "
+			. 'See the warning in "Fetching the value or values of a single named parameter"';
+	}
 
     return wantarray ?  @result : $result[0];
 }
@@ -4562,13 +4568,30 @@ named parameter. If the parameter is multivalued (e.g. from multiple
 selections in a scrolling list), you can ask to receive an array.  Otherwise
 the method will return a single value.
 
+B<Warning> - calling param in list context can lead to vulnerabilities if
+you do not sanitise user input as it is possible to inject other param
+keys and values into your code. The following code is an example of a
+vulnerability as the call to param will be evaluated in list context and
+thus possibly inject extra keys and values into the hash:
+
+	my %user_info = (
+		id   => 1,
+		name => $query->param('name'),
+	);
+
+The fix for the above is to force scalar context on the call to ->param by
+prefixing it with "scalar"
+
+	name => scalar $query->param('name'),
+
+If you call param in list context a warning will be raised by CGI.pm, you can
+disable this warning by setting $CGI::LIST_CONTEXT_WARN to 0.
+
 If a value is not given in the query string, as in the queries
 "name1=&name2=", it will be returned as an empty string.
 
-
 If the parameter does not exist at all, then param() will return undef
 in a scalar context, and the empty list in a list context.
-
 
 =head2 Setting the value(s) of a named parameter:
 
